# htmx-in-rust

./: Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: azure-container-webapp.yml  shuttle-webapp.yml
api/: Cargo.toml
api/src/: main.rs  root.rs
controller/: Cargo.toml
controller/src/: lib.rs  order.rs  root.rs  todo.rs
migrations/: 0001_init.sql  0002_init.sql  0003_init.sql
model/: Cargo.toml
model/src/: lib.rs  order.rs  todo.rs
order/: Cargo.toml
order/src/: controller.rs  repository.rs  view.rs
order/templates/: layout.html
repository/: Cargo.toml
repository/src/: lib.rs  postgres_order_repository.rs  postgres_todo_repository.rs
src/: lib.rs  main.rs
src/controller/: order.rs  root.rs  todo.rs
src/model/: mod.rs  order.rs  todo.rs
src/repository/: mod.rs  postgres_todo_repository.rs
src/view/: html.rs
src/view/templates/: index.html  layout.html
src/view/templates/order/: index.html  rows.html
src/view/templates/todo/: index.html  items.html
templates/: layout.html
todo/: Cargo.toml
todo/src/: controller.rs  lib.rs  model.rs  repository.rs  view.rs
todo/templates/: layout.html
view/: Cargo.toml
view/src/: html.rs
view/templates/: index.html
view/templates/order/: index.html
