[workspace]
members = [
    "api"
,   "controller"
,   "model"
,   "repository"
,   "view"
]
resolver = "2"

[workspace.dependencies]
model = { version = "0.1.0", path = "model" }
view = { version = "0.1.0", path = "view" }
controller = { version = "0.1.0", path = "controller" }
repository = { version = "0.1.0", path = "repository" }
sqlx = { version = "0.7.1", features = ["chrono", "postgres"]}
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.81"
tokio = "1.39.2"
actix-web = "4"
