[workspace]
members = [
    "api",
    "order",
    "todo"
]
resolver = "2"

[workspace.dependencies]
order = { path = "order" }
todo = { path = "todo" }
sqlx = { version = "0.8.2", features = ["chrono", "postgres"]}
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.81"
tokio = "1.39.2"
actix-web = "4"
