[workspace]
members = [
    "api",
    "view",
    "todo",
    "order"
]
resolver = "2"

[workspace.dependencies]
view = { path = "view" }
todo = { path = "todo" }
order = { path = "order" }
sqlx = { version = "0.8.2", features = ["chrono", "postgres"]}
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.81"
tokio = "1.39.2"
actix-web = "4"
