[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
todo = { workspace = true }
order = { workspace = true }
view = { workspace = true }
actix-web = { workspace = true }
sqlx = { workspace = true }
shuttle-actix-web = "0.54.0"
shuttle-runtime = "0.54.0"
shuttle-shared-db = { version = "0.54.0", features = ["postgres", "sqlx"] }
